cambios en rutas y estilos

--- a/views/products/productDetail.ejs
+++ b/views/products/productDetail.ejs
@@ -17,12 +17,11 @@
 
 <body>
     <!-- Aquí comienza el header: logo, navbars y campo de búsqueda -->
-    <%- include('partials/header.ejs') %>
+    <%- include('../partials/header.ejs') %>
 
     <!-- Aquí comienza el main -->
     <main>
 
-        <div class="barraSeparacion"></div>
 
         <section>
         <br>
@@ -77,7 +76,7 @@
     </main>
 
     <!-- Aquí comienza el footer: lista de correo, links de información y redes sociales -->
-    <%- include('partials/footer.ejs') %>
+    <%- include('../partials/footer.ejs') %>
 
 </body>
 
