--- a/views/users/cart.ejs
+++ b/views/users/cart.ejs
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
-    <%- include('../partials/head.ejs') %>
+
+<head>
+    <!-- Metadatos: idiomas, adaptabilidad, estilos, tipografías, iconos y título -->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/css/styles-prodCart.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link rel="icon" href="/images/icon.png">
+    <title>Animalia - Lo mejor para tus mascotas</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+</head>
+
 <body>
     <!-- Aquí comienza el header: logo, navbars y campo de búsqueda -->
     <%- include('../partials/header.ejs') %>
@@ -8,8 +22,6 @@
     <!-- Aquí comienza el main -->
     <main>
 
-        <div class="barraSeparacion"></div>
-        <br>
         <div class="titulares">
             <h1>Tu carrito de compras</h1>
         </div>
