--- a/public/css/styles-login.css
+++ b/public/css/styles-login.css
@@ -19,117 +19,20 @@
     --negro: #000;
 }
 
-/* Estilos header */
-
-.navbarSuperior {
-    display: flex;
-    justify-content: right;
-    align-items: center;
-    background-color: var(--celeste);
-    font-size: 12px;
-    color: var(--blanco);
-    width: 100%;
-    flex-wrap: nowrap;
-    padding: 1px;
-}
-
-.navbarSuperior a {
-    text-decoration: none;
-    color: var(--blanco);
-    text-align: right;
-    padding: 5px;
-    margin: 3px;
-}
-
-.navbarSuperior a:hover {
-    color: var(--amarillo);
-}
-
-.navbarInferior {
-    background-color: var(--blanco);
-    width: 100%;
-    display: flex;
-    box-sizing: border-box;
-    justify-content: space-around;
-    align-items: center;
-    flex-wrap: wrap;
-}
-
-.logo img {
-    max-width: 130px;
-    display: flex;
-}
-
-.secciones {
-    display: none;
-}
-
-.secciones ul {
-    display: flex;
-    list-style: none;
-
-}
-
-.secciones li {
-    margin: 4px 6px;
-    padding: 4px;
-}
-
-.navbarInferior a {
-    text-decoration: none;
-    color: var(--negro);
-    padding: 4px 6px;
-    margin: 4px;
-    font-size: 18px;
-}
-
-.navbarInferior a:hover {
-    color: var(--celeste);
-}
-
-.navbarInferior input {
-    display: inline-block;
-    background-color: var(--blanco);
-    padding: 12px 10px 12px 12px;
-    border: solid 1px var(--verde);
-    border-radius: 20px;
-    font: inherit;
-}
-
-.burguer-menu {
-    display: block;
-    background-color: var(--celeste);
-    color: var(--blanco);
-    width: 0 auto;
-    padding: 6px 8px;
-    margin: 15px;
-    border-radius: 8px;
-    border: solid var(--celeste) 1px;
-    font-weight: bold;
-    font-size: 1em;
-}
 
 /* Estilos Formularios - Register*/
 
-.barraSeparacion {
-    background-color: var(--celeste);
-    padding: 14px;
-    margin: 0px auto;
-    max-width: 550;
 
-}
-
-.formulario {
-    text-align: left;
-    background-color: white;
-    width: 98%;
-    padding: 15px;
-}
 
 .formulario p {
 font-size: 15px;
+};
 
-}
+.links { 
+    text-decoration: none !important;
+    color:red !important;
+};
+
 .formulario h2 {
     text-align: center;
     margin: 2px;
@@ -168,8 +71,6 @@ font-size: 15px;
     color: var(--blanco);
 }
 
-.formulario a:hover {
-    color: var(--amarillo)}
 
 .formulario h3{
     text-align: center;
@@ -180,9 +81,9 @@ font-size: 15px;
     text-align: center;
 }
 
-.resetButton:hover,
 .sendButton:hover {
     background-color: var(--celeste);
+    border: 1px solid var(--celeste);
 }
 
 .crearPerfil,
