--- a/public/css/styles-reg.css
+++ b/public/css/styles-reg.css
@@ -17,107 +17,7 @@
     --negro: #000;
 }
 
-/* Estilos para elementos del header */
-
-.navbarSuperior {
-    display: flex;
-    justify-content: right;
-    align-items: center;
-    background-color: var(--celeste);
-    font-size: 12px;
-    color: var(--blanco);
-    width: 100%;
-    flex-wrap: nowrap;
-    padding: 1px;
-}
-
-.navbarSuperior a {
-    text-decoration: none;
-    color: var(--blanco);
-    text-align: right;
-    padding: 5px;
-    margin: 3px;
-}
-
-.navbarSuperior a:hover {
-    color: var(--amarillo);
-}
-
-.navbarInferior {
-    background-color: var(--blanco);
-    width: 100%;
-    display: flex;
-    box-sizing: border-box;
-    justify-content: space-around;
-    align-items: center;
-    flex-wrap: wrap;
-}
-
-.logo img {
-    max-width: 130px;
-    display: flex;
-}
-
-.secciones {
-    display: none;
-}
-
-.secciones ul {
-    display: flex;
-    list-style: none;
-
-}
-
-.secciones li {
-    margin: 4px 6px;
-    padding: 4px;
-}
-
-.navbarInferior a {
-    text-decoration: none;
-    color: var(--negro);
-    padding: 4px 6px;
-    margin: 4px;
-    font-size: 18px;
-}
-
-.navbarInferior a:hover {
-    color: var(--celeste);
-}
-
-.navbarInferior input {
-    display: inline-block;
-    background-color: var(--blanco);
-    padding: 12px 10px 12px 12px;
-    border: solid 1px var(--verde);
-    border-radius: 20px;
-    font: inherit;
-}
-
-.burguer-menu {
-    display: block;
-    background-color: var(--celeste);
-    color: var(--blanco);
-    width: 0 auto;
-    padding: 6px 8px;
-    margin: 15px;
-    border-radius: 8px;
-    border: solid var(--celeste) 1px;
-    font-weight: bold;
-    font-size: 1em;
-}
-
-
 /* CSS Form de Registro Mariano */
-
-.barraSeparacion {
-    background-color: var(--celeste);
-    padding: 14px;
-    margin: 0px auto;
-    max-width: 550;
-
-}
-
 
 .formulario {
     text-align: center;
@@ -148,7 +48,7 @@ font-size: 15px;
 }
 
 .formulario input:focus {
-    color: #EAC926;
+    color: var(--verde);
 }
 
 .formulario button {
@@ -173,6 +73,8 @@ font-size: 15px;
 .resetButton:hover,
 .sendButton:hover {
     background-color: var(--celeste);
+    border: 1px solid var(--celeste);
+
 }
 
 .crearPerfil,
@@ -181,70 +83,4 @@ font-size: 15px;
     color:var(--rosa);
     font-size: 14px;
     font-weight: bold;
-}
-
-
-/* Estilos para el footer */
-
-footer {
-    background-color: var(--celeste);
-    color: var(--blanco);
-    font-size: 16px;
-}
-
-
-.enlaces {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-}
-
-.enlaces h4 {
-    text-align: center ;
-}
-
-.enlaces a, .legales a {
-    text-decoration: none;
-    color: var(--blanco);
-    margin: 11px;
-    padding: 1px;
-}
-
-.enlaces a:hover, .legales a:hover {
-    color: var(--amarillo);
-}
-
-.enlaces li {
-    padding: 5px;
-    list-style: none;
-    text-align: center;
-}
-
-.legales {
-    text-align: left;
-    padding: 5px;
-}
-
-/* Estilos para diseño adaptativo */
-
-/* mobile */
-
-@media (min-width: 320px) {
-
-}
-
-/* tablet */
-@media (min-width: 768px) {
-}
-
-/* desktop */
-@media (min-width: 1024px) {
-
-    .burguer-menu {
-        display: none;
-    }
-
-    .secciones {
-        display: flex;
-    }
 }
