--- a/views/index.ejs
+++ b/views/index.ejs
@@ -68,9 +68,9 @@
 
             <article>
                 <div class="card">
-                    <a href="./views/productDetail.html"><img src="/images/proplangato.webp"></a>
+                    <a href="/products/productDetail"><img src="/images/proplangato.webp"></a>
                     <div class="card-body">
-                        <a href="./views/productDetail.html">
+                        <a href="/products/productDetail">
                             <p class="descripciones">PRO PLAN GATO ADULTO 7.5 KG</p>
                         </a>
                         <p class="precios">$8.156</p>
@@ -82,9 +82,9 @@
 
             <article>
                 <div class="card">
-                    <a href="./views/productDetail.html"><img src="/images/agilitysardina.webp"></a>
+                    <a href="/products/productDetail"><img src="/images/agilitysardina.webp"></a>
                     <div class="card-body">
-                        <a href="./views/productDetail.html">
+                        <a href="/products/productDetail">
                             <p class="descripciones">AGILITY CATS SARDINA 340 GR</p>
                         </a>
                         <p class="precios">$246</p>
@@ -96,9 +96,9 @@
 
             <article>
                 <div class="card">
-                    <a href="./views/productDetail.html"><img src="/images/proplanperro.webp"></a>
+                    <a href="/products/productDetail"><img src="/images/proplanperro.webp"></a>
                     <div class="card-body">
-                        <a href="./views/productDetail.html">
+                        <a href="/products/productDetail">
                             <p class="descripciones">PRO PLAN PERRO ADULTO 15 KG</p>
                         </a>
                         <p class="precios">$8.908</p>
@@ -110,9 +110,9 @@
 
             <article>
                 <div class="card">
-                    <a href="./views/productDetail.html"><img src="/images/purinaperro.webp"></a>
+                    <a href="/products/productDetail"><img src="/images/purinaperro.webp"></a>
                     <div class="card-body">
-                        <a href="./views/productDetail.html">
+                        <a href="/products/productDetail">
                             <p class="descripciones">PURINA DENTALIFE PERRO 119 GR</p>
                         </a>
                         <p class="precios">$8.156</p>
@@ -124,9 +124,9 @@
 
             <article>
                 <div class="card">
-                    <a href="./views/productDetail.html"><img src="/images/purinaperro.webp"></a>
+                    <a href="/products/productDetail"><img src="/images/purinaperro.webp"></a>
                     <div class="card-body">
-                        <a href="./views/productDetail.html">
+                        <a href="/products/productDetail">
                             <p class="descripciones">PURINA DENTALIFE PERRO 119 GR</p>
                         </a>
                         <p class="precios">$8.156</p>
@@ -138,9 +138,9 @@
 
             <article>
                 <div class="card">
-                    <a href="./views/productDetail.html"><img src="/images/proplangato.webp"></a>
+                    <a href="/products/productDetail"><img src="/images/proplangato.webp"></a>
                     <div class="card-body">
-                        <a href="./views/productDetail.html">
+                        <a href="/products/productDetail">
                             <p class="descripciones">PRO PLAN GATO ADULTO 7.5 KG</p>
                         </a>
                         <p class="precios">$8.156</p>
@@ -152,9 +152,9 @@
 
             <article>
                 <div class="card">
-                    <a href="./views/productDetail.html"><img src="/images/agilitysardina.webp"></a>
+                    <a href="/products/productDetail"><img src="/images/agilitysardina.webp"></a>
                     <div class="card-body">
-                        <a href="./views/productDetail.html">
+                        <a href="/products/productDetail">
                             <p class="descripciones">AGILITY CATS SARDINA 340 GR</p>
                         </a>
                         <p class="precios">$246</p>
@@ -166,9 +166,9 @@
 
             <article>
                 <div class="card">
-                    <a href="./views/productDetail.html"><img src="/images/proplanperro.webp"></a>
+                    <a href="/products/productDetail"><img src="/images/proplanperro.webp"></a>
                     <div class="card-body">
-                        <a href="./views/productDetail.html">
+                        <a href="/products/productDetail">
                             <p class="descripciones">PRO PLAN PERRO ADULTO 15 KG</p>
                         </a>
                         <p class="precios">$8.908</p>
