--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
-<%- include('../partials/head.ejs') %>
+
+<head>
+    <!-- Metadatos: idiomas, adaptabilidad, estilos, tipografías, iconos y título -->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/css/styles-login.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link rel="icon" href="/images/icon.png">
+    <title>Animalia - Lo mejor para tus mascotas</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+</head>
+
 <body>
     <!-- Aquí comienza el header: logo, navbars y campo de búsqueda -->
     <%- include('../partials/header.ejs') %>
@@ -8,12 +22,10 @@
     <!-- Aquí comienza el main -->
     <main>
 
-        <div class="barraSeparacion"></div>
-
         <div class="formulario login">
 
             <br>
-            <h2>¡Hola! Completá tus datos para ingresar.</h2>
+            <h2 class="titulo">¡Hola! Completá tus datos para ingresar.</h2>
             <br>
             <form method="POST" action="#">
                 <br>
@@ -27,13 +39,13 @@
                 <br>
                 <br>
                 <p>¿Olvidaste tu contraseña?</p>
-                <p> Recuperar contraseña</p>
+                <a href="#" class="links"> Recuperar contraseña</a>
             </form>
             <br>
             <br>
             <h3>¿Primera vez en Animalia?</h3>
             <br>
-            <h3 href="/views/register.html" class="crearPerfil">Creá tu cuenta</h3>
+            <a href="/users/register" class="crearPerfil">Creá tu cuenta</a>
             <br>
             <br>
         </div>
