cambios en index y en partials

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -16,8 +16,6 @@
 </head>
 
 <footer>
-    <br>
-    
     <div class="enlaces">
         <section class="nosotros">
             <h4>Nosotros</h4>
@@ -58,9 +56,18 @@
             </ul>
         </section>
     </div>
-    <br>
+    
+    <div class="up">
+        <button onclick="window.scrollTo({
+            top: 0,
+            behavior: 'smooth'
+        });">
+            <i class="fa-solid fa-caret-up"></i>
+            </i></button>
+    </div>
+
     <div class="legales">
         <p>&nbsp © Pet Shop Animalia - Lo mejor para tus mascotas.<a href="#">Términos y condiciones</a></p>
     </div>
-    <br>
+
 </footer>
