--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,10 +5,8 @@
         <p> | </p>
         <a href="/users/register"><i class="fa-solid fa-user-plus"></i> Registrarse</a>
         <p> | </p>
-        <a href="#"><i class="fa-solid fa-heart"></i> Favoritos</a>
-        <p> | </p>
         <a href="/users/cart"><i class="fa-solid fa-cart-shopping"></i> Carrito</a>
-        &nbsp
+        &nbsp&nbsp
     </div>
 
     <div class="navbarInferior">
