--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -305,8 +305,35 @@ article {
 }
 
 .consejo img {
-max-width: 33%;
+max-width: 30%;
 border-radius: 50%;
+}
+
+.up {
+    display: flex;
+    justify-content: right;
+    position: static;
+    bottom: 0;
+    right: 0;
+    opacity: 0.7;
+}
+
+.up button {
+    background-color: var(--celeste);
+    color: var(--blanco);
+    border: 1px solid var(--blanco);
+    border-radius: 50%;
+    padding: 10px;
+    font-size: 20px;
+    font-weight: bold;
+    display: flex;
+    justify-content: right;
+    margin: 20px;
+}
+
+.up button:hover {
+    color: var(--amarillo);
+    border: 1px solid var(--amarillo);
 }
 
 /* Estilos para el footer */
