--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -291,7 +291,8 @@ article {
 
 .consejo {
     display: inblock-flex;
-    max-width: 53%;
+    flex-wrap: wrap;
+    max-width: 50%;
     margin: 0 auto;
     text-align: center;
     padding: 20px;
@@ -346,6 +347,7 @@ footer {
 
 .newsletter {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     font-size: 16px;
     padding: 3px;
@@ -358,6 +360,7 @@ footer {
     border: 1px solid var(--verde);
     background-color: var(--blanco);
     color: var(--verde);
+    max-width: max-content;
 }
 
 .newsletter button {
