--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -330,6 +330,7 @@ border-radius: 50%;
     display: flex;
     justify-content: right;
     margin: 20px;
+    cursor: pointer;
 }
 
 .up button:hover {
