--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -330,6 +330,7 @@ border-radius: 50%;
     background-color: var(--celeste);
     color: var(--blanco);
     border: 1px solid var(--blanco);
+    outline: var(--blanco);
     border-radius: 50%;
     padding: 10px;
     font-size: 20px;
