Cambios en rutas y controladores

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -22,8 +22,8 @@
             <br>
             <ul>
                 <li><a href="#">Quiénes somos</a></li>
-                <li><a href="#">Contacto</a></li>
                 <li><a href="#">Sucursales</a></li>
+                <li><a href="./products">Catálogo</a></li>
             </ul>
         </section>
 
@@ -31,6 +31,7 @@
             <h4>Ayuda</h4>
             <br>
             <ul>
+                <li><a href="mailto:contacto@animalia.com">Contacto</a></li>
                 <li><a href="#">Medios de pago</a></li>
                 <li><a href="#">Envios</a></li>
             </ul>
@@ -42,7 +43,6 @@
             <ul>
                 <li><a href="#">Mis pedidos</a></li>
                 <li><a href="#">Seguimiento</a></li>
-                <li><a href="#">Favoritos</a></li>
             </ul>
         </section>
 
@@ -50,7 +50,7 @@
             <h4>¡Seguínos!</h4>
             <br>
             <ul>
-                <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                <li><a href="https://twitter.com/search?q=Animalia&src=typed_query" target=”_blank”><i class="fa-brands fa-twitter"></i></a></li>
                 <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
                 <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
             </ul>
