--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,7 +10,7 @@
     </div>
 
     <div class="navbarInferior">
-        <div class="logo"><a href="/"><img src="/images/logo.png" alt="Animalia"></a></div>
+        <div class="logo"><a href="/"><img src="/images/logo.png" alt="Animalia" title="Animalia - Lo mejor para tus mascotas"></a></div>
 
         <nav class="secciones">
 
