--- a/views/products/productDetail.ejs
+++ b/views/products/productDetail.ejs
@@ -9,7 +9,7 @@
     <link href="/css/styles-ProdDetails.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="icon" href="/images/icon.png">
-    <title>Animalia - Lo mejor para tus mascotas</title>
+    <title>Detalle de producto - Animalia</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -22,41 +22,41 @@
     <!-- Aquí comienza el main -->
     <main>
         <section>
-        <br>
-        <h2 class="titulares">Detalle del producto elegido</h3>
-    <article>
-        <div class="detail__container">
-            <div class="card__detail">
-                        <img class="detail_prod__imag" src="<%= producto.image%>"></a>
-                        <p class="descripciones"><%= producto.name%> </p>
-                    </a>
-                    <p class="precios">ANTES: $<%=producto.price%></p>
-                    <br>
-                    <p class="descuentos">¡AHORA: $<%=producto.discount%>!</p>
-                    <br>
-                    <label for="Cantidad" class="menu__cantidad">Cantidad:</label>
-                    <br>
-                    <select name="Cantidad" id="Cantidad">
-                      <option value="1">1</option>
-                      <option value="2">2</option>
-                      <option value="3">3</option>
-                      <option value="4">4</option>
-                    </select>
-                    <br>
-                    <br>
-                    <button>Agregar al carrito</button>
-                <br>
-                <div class="cuotas__container">
-                        <i class="fa-brands fa-cc-visa"></i>
-                        <i class="fa-brands fa-cc-amex"></i>
-                        <i class="fa-brands fa-cc-apple-pay"></i>
-                        <i class="fa-brands fa-cc-paypal"></i>
-                        <p class="descripciones"><%= producto.description%></p>
-                </div>
+            <br>
+            <h2 class="titulares">Detalle del producto elegido</h3>
+                <article>
+                    <div class="detail__container">
+                        <div class="card__detail">
+                            <img class="detail_prod__imag" src="<%= producto.image%>" title="<%=producto.name%>"></a>
+                            <p class="descripciones"><%= producto.name%> </p>
+                            </a>
+                            <p class="precios">ANTES: $<%=producto.price%></p>
+                            <br>
+                            <p class="descuentos">¡AHORA: $<%=producto.discount%>!</p>
+                            <br>
+                            <label for="Cantidad" class="menu__cantidad">Cantidad:</label>
+                            <br>
+                            <select name="Cantidad" id="Cantidad">
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                            </select>
+                            <br>
+                            <br>
+                            <button>Agregar al carrito</button>
+                            <br>
+                            <div class="cuotas__container">
+                                <i class="fa-brands fa-cc-visa"></i>
+                                <i class="fa-brands fa-cc-amex"></i>
+                                <i class="fa-brands fa-cc-apple-pay"></i>
+                                <i class="fa-brands fa-cc-paypal"></i>
+                                <p class="descripciones"><%= producto.description%></p>
+                            </div>
+                        </div>
+                </article>
+        </section>
         </div>
-    </article>
-</section>
-</div>
 
     </main>
 
