--- a/views/index.ejs
+++ b/views/index.ejs
@@ -72,7 +72,7 @@
             <article>
                 <div class="card">
                     <a href="/products/productDetail/<%=product.id %>">
-                   <img src="<%=product.image%>"></a>
+                   <img src="<%=product.image%>" title="<%=product.name%>"></a>
                     <div class="card-body">
                         <a href="/products/productDetail/<%=product.id %>">
                             <p class="nombres"><%=product.name%></p></a>
