--- a/views/products/products.ejs
+++ b/views/products/products.ejs
@@ -9,7 +9,7 @@
     <link href="/css/styles-ProdDetails.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="icon" href="/images/icon.png">
-    <title>Animalia - Lo mejor para tus mascotas</title>
+    <title>Catálogo - Animalia</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -29,10 +29,9 @@
             <% products.forEach(product => { %>
             <article>
                 <div class="card">
-                    <!-- <a href="/products/detail/<%= product.id %>"> -->
-                    <a href="/products/productDetail"><img src="<%=product.image%>"></a>
+                        <a href="/products/productDetail/<%=product.id %>"><img src="<%=product.image%>" title="<%=product.name%>"></a>
                     <div class="card-body">
-                        <a href="/products/productDetail">
+                        <a href="/products/productDetail/<%=product.id %>">
                             <p class="nombres"><%=product.name%></p>
                         </a>
                         <p class="precios">ANTES: $<%=product.price%></p>
