--- a/views/users/cart.ejs
+++ b/views/users/cart.ejs
@@ -9,7 +9,7 @@
     <link href="/css/styles-prodCart.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="icon" href="/images/icon.png">
-    <title>Animalia - Lo mejor para tus mascotas</title>
+    <title>Carrito de compras - Animalia</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
