cambios en form edit

--- a/views/products/productEdit.ejs
+++ b/views/products/productEdit.ejs
@@ -25,12 +25,12 @@
                 <h3 class="titulares">Formulario para edición y modificación de productos en stock</h3>
                 <p>Las caracteristicas ingresadas pueden ser modificadas en cualquier momento</p>
                 </div>
-                <form action="/views/products/productEdit" method="POST" enctype="multipart/form-data" class="create__product-form">
+                <form action="/products/productEdit/<%= product.id %>?_method=PUT" method="POST" enctype="multipart/form-data" class="create__product-form">
                   <!-- Nombre del producto -->
                   <br>
                 <div>
                   <label for="productName" class="form__label">Nombre del producto:</label>
-                  <input type="text" name="productName" placeholder="Complete este campo" class ="form__input"></input>
+                  <input type="text" name="productName" value="<%= product.name%>" placeholder="Complete este campo" class ="form__input"></input>
                   <br>
                 </div>
                 <br>
@@ -63,26 +63,26 @@
                     <div>
                   <label for="productSize" class="form__label">Medidas del producto</label>
                   <br>
-                  <input type="text" name="productSize" placeholder="120 x 90 x 50" class ="form__input" value="<%= locals.oldData? oldData.productSize : null%>"><br>
+                  <input type="text" name="productSize" value="<%= product.size %>" placeholder="120 x 90 x 50" class ="form__input" value="<%= locals.oldData? oldData.productSize : null%>"><br>
                 </div>
                 <br>
-                  <!-- Img del producto -->
+                  <!-- Img del producto //comprobar  img del producto y ruta//--> 
                   <div>
                   <label for="productImg" class="form__label">Elige una imagen</label>
                   <br>
-                  <input type="file" name="productImg" id="productImg" class ="form__input" accept="image/*" value="<%= locals.oldData? oldData.productImg : null%>"><br>
+                  <input type="file" name="" id="productImg" class ="form__input" accept="image/*" value="<%= locals.oldData? oldData.productImg : null%>"><br>
                 </div>
                 <br>
                   <!-- Precio del producto -->
                 <div>
                   <label for="productPrice" class="form__label">Precio:</label>
-                  <input type="text" name="productPrice" id="productPrice" class ="form__input" placeholder="$"></input> <br>
+                  <input type="text" name="productPrice" value="<%= product.price %>" id="productPrice" class ="form__input" placeholder="$"></input> <br>
                 </div>
                 <br>
                 <!--Precio del producto con descuento-->
                 <div>
                   <label for="Pricediscount" class="form__label">Precio con descuento:</label>
-                  <input type="text" name="Pricediscount" id="Priced" class ="form__input" placeholder="$"></input>
+                  <input type="text" name="Pricediscount" value="<%= product.discount %>" id="Priced" class ="form__input" placeholder="$"></input>
                   <br>
                 </div>
                   <!-- Descripción del producto -->
@@ -90,7 +90,7 @@
                   <label for="productDescription" class="form__label">Escriba una descripción del producto</label>
                   <br>
                   <br>
-                  <textarea type="text" name="productDescription" placeholder="Escriba aqui los detalles del producto."><%= locals.oldData? oldData.productDescription : null%></textarea>
+                  <textarea type="text" name="productDescription" value="<%= product.description %>" placeholder="Escriba aqui los detalles del producto."><%= locals.oldData? oldData.productDescription : null%></textarea>
                 </div>
                 <br>
                   <div>
