--- a/views/products/productCreate.ejs
+++ b/views/products/productCreate.ejs
@@ -91,6 +91,7 @@
                 </div>
                 <br>
                   <div>
+                    <button type="submit" class="submit">Agregar producto</button>
                   <input type="submit" value="Crear">
                   <a href="/products"> Cancelar </a>
                   </div>
