--- a/views/products/productEdit.ejs
+++ b/views/products/productEdit.ejs
@@ -94,7 +94,7 @@
                 </div>
                 <br>
                   <div>
-                  <input type="submit" value="Crear">
+                  <input type="submit" value="Modificar">
                   <a href="/products"> Cancelar </a>
                   </div>
                 </form>
