agrego boton aceptar y cancelar

--- a/views/products/productEdit.ejs
+++ b/views/products/productEdit.ejs
@@ -95,6 +95,7 @@
                 <br>
                   <div>
                   <input type="submit" value="Modificar">
+                  <a href="/products"> Aceptar </a>
                   <a href="/products"> Cancelar </a>
                   </div>
                 </form>
