cambios en prodEdity JSON

--- a/views/products/productEdit.ejs
+++ b/views/products/productEdit.ejs
@@ -38,7 +38,6 @@
                 <div>
                     <label for="productTarea" class="form__label" placeholder="Seleccione el tipo de tarea">Tipo de tarea</label>
                     <select name="productTarea" id="productTarea" class="form__input">
-                        <option value="">Alta</option>
                         <option value="">Baja</option>
                         <option value="">Modificación</option>
                         <option value="">Producto discontinuo</option>
@@ -94,8 +93,7 @@
                 </div>
                 <br>
                   <div>
-                  <input type="submit" value="Modificar">
-                  <a href="/products"> Aceptar </a>
+                  <button type="submit" value="Modificar">Modificar producto </button>
                   <a href="/products"> Cancelar </a>
                   </div>
                 </form>
