agrego boton baja y alta prodEdit

--- a/views/products/productCreate.ejs
+++ b/views/products/productCreate.ejs
@@ -91,7 +91,7 @@
                 </div>
                 <br>
                   <div>
-                    <button type="submit" class="submit">Agregar producto</button>
+                    <button type="submit" class="submit">Alta de producto</button>
                   <a href="/products"> Cancelar </a>
                   </div>
                 </form>
