--- a/views/products/productEdit.ejs
+++ b/views/products/productEdit.ejs
@@ -94,6 +94,7 @@
                 <br>
                   <div>
                   <button type="submit" value="Modificar">Modificar producto </button>
+                  <button type="submit" value="Modificar">Baja de producto </button>
                   <a href="/products"> Cancelar </a>
                   </div>
                 </form>
