middlewares y form register

--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -27,10 +27,11 @@
             <br>
             <h2 class="titulo">¡Hola! Completá tus datos para ingresar.</h2>
             <br>
-            <form method="POST" action="#">
+            <form action="/views/users/login" method="POST" >
                 <br>
                 <p><input type="text" name="usuario" placeholder="E-mail  o  usuari@" required></input></p>
                 <p><input type="password" name="password" placeholder="Contraseña" required></input></p>
+                <!-- Pendiente boton para mostrar contraseña -->
                 <br>
                 <input type="checkbox" name="datosUsuario" value="1" checked>
                 <label>Recordar mis datos</label>
