--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -27,7 +27,7 @@
             <br>
             <h2 class="titulo">¡Hola! Completá tus datos para ingresar.</h2>
             <br>
-            <form action="/views/users/login" method="POST" >
+            <form action="./users/login" method="POST" >
                 <br>
                 <p><input type="text" name="usuario" placeholder="E-mail  o  usuari@" required></input></p>
                 <p><input type="password" name="password" placeholder="Contraseña" required></input></p>
