--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -39,11 +39,11 @@
             <form action="/views/users/register" method="POST" enctype="multipart/form-data">
 
                 <label for="nombreyapellido">Nombre y apellido</label>
-                <p><input type="text" name="nombre" placeholder="Ingrese su nombre" required>
+                <p><input type="text" name="nombreyapellido" placeholder="Ingrese su nombre" required>
                     </input></p>
                 <br>
                 <label for="user">Nombre de usuari@</label>
-                <p><input type="text" name="usuario" placeholder="Ingrese su usuario" minlength="4" maxlength="12" required>
+                <p><input type="text" name="user" placeholder="Ingrese su usuario" minlength="4" maxlength="12" required>
                     </input></p>
                 <br>
                 <label for="email">E-mail</label>
